added logout endpoint